using System;

namespace ReadTrack.Recommendations.Domain.Entities
{
    /// <summary>
    /// Represents a single book recommendation generated by the AI system.
    /// </summary>
    public class Recommendation
    {
        public Guid Id { get; private set; }
        public Guid JobId { get; private set; }
        public string Title { get; private set; }
        public string Author { get; private set; }
        public string Description { get; private set; }
        public string Reasoning { get; private set; }
        public float ConfidenceScore { get; private set; }
        public string? Isbn { get; private set; }
        public string? CoverImageUrl { get; private set; }
        public DateTime CreatedAt { get; private set; }

        // Navigation property for the job that generated this recommendation
        public virtual RecommendationJob? Job { get; private set; }

        private Recommendation() { } // For EF Core

        public Recommendation(Guid jobId, string title, string author, string description, string reasoning, float confidenceScore, string? isbn = null, string? coverImageUrl = null)
        {
            if (jobId == Guid.Empty) throw new ArgumentException("JobId cannot be empty.", nameof(jobId));
            if (string.IsNullOrWhiteSpace(title)) throw new ArgumentNullException(nameof(title));
            if (string.IsNullOrWhiteSpace(author)) throw new ArgumentNullException(nameof(author));
            if (string.IsNullOrWhiteSpace(description)) throw new ArgumentNullException(nameof(description));
            if (string.IsNullOrWhiteSpace(reasoning)) throw new ArgumentNullException(nameof(reasoning));
            if (confidenceScore < 0 || confidenceScore > 1.0) throw new ArgumentOutOfRangeException(nameof(confidenceScore), "Confidence score must be between 0 and 1.");

            Id = Guid.NewGuid();
            JobId = jobId;
            Title = title;
            Author = author;
            Description = description;
            Reasoning = reasoning;
            ConfidenceScore = confidenceScore;
            Isbn = isbn;
            CoverImageUrl = coverImageUrl;
            CreatedAt = DateTime.UtcNow;
        }
    }
}